# BDR_SBOR

./: .gitignore  README.md  RELEASE_NOTES.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/bdr_wizard/: __init__.py  auth.py  localization.py  models.py  security.py
src/bdr_wizard/analyzer/: __init__.py  service.py
src/bdr_wizard/builder/: __init__.py  service.py
src/bdr_wizard/excel/: __init__.py  analyzer.py  compare.py  loader.py
src/bdr_wizard/ingestion/: __init__.py  service.py
src/bdr_wizard/mapper/: __init__.py  service.py
src/bdr_wizard/reporting/: __init__.py  service.py
src/bdr_wizard/storage/: __init__.py  cleanup.py  encryption.py  repository.py
src/bdr_wizard/ui/: app.py
src/bdr_wizard/ui/static/: styles.css
src/bdr_wizard/ui/templates/: base.html  error.html  login.html  mapping.html  preview.html  processing.html  result.html  upload.html
src/bdr_wizard/workflow/: __init__.py  builder.py  jobs.py  wizard.py
tests/: test_pipeline.py
tests/e2e/: test_browser_flow.py
